# Toolkit

./: .gitignore  CMakeLists.txt  DeviceTypeA.cpp  DeviceTypeA.hpp  SimpleClient.cpp  SimpleClient.hpp  SimpleTCPClient.cpp  SimpleTCPClient.hpp  Toolkit.cpp  Toolkit.hpp  Toolkit.ui  UDPDevice.cpp  UDPDevice.hpp  UDPServer.cpp  UDPServer.hpp  main.cpp  readme.md  simple_client.cpp  simple_client.hpp
